# ai_workshop_2025_gen_ai_session

./: .gitignore  README.md  dev.nix
.idx/: dev.nix
rag_app/: .gitignore  0_llm_basics_with_langchain.py  1_vector_db_basic_simplified.py  1_vector_db_basics.py  2_structured_outputs.py  3_deeper_with_langgraph.py  bonus_alfred_agent.py  configuration.py  dev.nix  error_handler.py  example.py  final_app.py  final_graph.py  final_step_app.py  final_step_graph.py  final_step_vector_db.py  final_vector_db.py  first_step.py  install_requirements.sh  pyproject.toml  rag_final_step_app.py  rag_final_step_graph.py  rag_final_step_vector_db.py  rag_first_step.py  rag_second_step.py  rag_third_step.py  rag_zero_sep.py  second_step.py  third_step.py
rag_app/dummy_sources/: france_du_pont_about_me.txt  france_du_pont_cv.txt  france_du_pont_github.txt  recent_computer_chips.txt  recent_gpu.txt  recent_mobile_chips.txt
